--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html, body {
-  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: 'Microsoft YaHei';
   color: #333;
   background-color: #fff;
@@ -14,4 +15,6 @@ h2 {
   margin: 0;
 }
 
-
+html, body, #root, .App {
+  height: 100%;
+}
