修复setState后state查询数据为初始值，导致 measureAllRows报错问题

--- a/src/pages/Map/index.scss
+++ b/src/pages/Map/index.scss
@@ -1,3 +1,12 @@
 .map, #container {
     height: 100%;
 }
+.navbar {
+    color: #333;
+    background-color: #f6f5f6;
+
+    .am-navbar-title {
+        color: #333;
+    }
+
+}
